Second commit of wallet provider service