@@ -16,7 +16,7 @@
         <dependency>
             <groupId>com.example</groupId>
             <artifactId>wallet-app</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.example</groupId>
@@ -34,6 +34,7 @@
             <artifactId>dubbo-spring-boot-starter</artifactId>
         </dependency>
 
+
         <dependency>
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo-registry-nacos</artifactId>
@@ -45,6 +46,14 @@
             <version>${nacos-client.version}</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>wallet-domain</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
@@ -52,6 +61,17 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot.version}</version>
+                <configuration>
+                    <jvmArguments>--add-opens java.base/java.math=ALL-UNNAMED</jvmArguments>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
